--- a/jasmine-standalone-2.8.0/SpecRunner.html
+++ b/jasmine-standalone-2.8.0/SpecRunner.html
@@ -15,10 +15,14 @@
   <!-- <script src="src/Player.js"></script> -->
   <!-- <script src="src/Song.js"></script> -->
 
-  <!-- include spec files here... -->
-  <script src="spec/SpecHelper.js"></script>
-  <script src="spec/PlayerSpec.js"></script>
+  <script src="../build/js/simple-list.js"></script>  
 
+  <!-- include spec files here... -->
+<!--  <script src="spec/SpecHelper.js"></script>
+<script src="spec/PlayerSpec.js"></script> -->
+<!--
+<script src="spec/SimpleItemSpec.js"></script> -->
+  <script src="spec/SimpleListSpec.js"></script>
 </head>
 
 <body>
