Tests: add source spec file in test runner

--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -12,10 +12,9 @@
   <script src="lib/jasmine-2.8.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="../build/js/simple-list.js"></script>  
+  <script src="js/simple-list.js"></script>  
 
   <!-- include spec files here... -->
-  <script src="spec/SpecHelper.js"></script>
   <script src="spec/SimpleItemSpec.js"></script> 
   <script src="spec/SimpleListSpec.js"></script>
 </head>
