--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -18,7 +18,7 @@
   <script src="spec/SimpleItemSpec.js"></script> 
   <script src="spec/SimpleListSpec.js"></script>
 </head>
-
 <body>
+  <div data-simple-list></div>
 </body>
 </html>
